Made slight change to Featured Items

--- a/index.html
+++ b/index.html
@@ -134,124 +134,123 @@
                 
 
                 <div class="featured-products">
-                    <div class="featured-item-1">
+                    <div class="featured-item">
                         <img src="image/cooking-pot.jpg" alt="Featured-Item1">
                         <h3>Portable Cooking Pot</h3>
                         <h3>(Price Now)</h3>
-                        <h4>(Price Before)</h4>
                         <h4>(Sold by: Qty)</h4>
-                        <h4>(Discount)</h4>
                         <p>(Ratings)</p>
+                        <button type="button" class="buy-now-btn">Buy Now</button>
+                        <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
-                    <div class="featured-item-2">
+                    <div class="featured-item">
                         <img src="image/juicer.jpg" alt="Featured-Item2">
                         <h3>Portable Juicer</h3>
                         <h3>(Price Now)</h3>
-                        <h4>(Price Before)</h4>
                         <h4>(Sold by: Qty)</h4>
-                        <h4>(Discount)</h4>
                         <p>(Ratings)</p>
+                        <button type="button" class="buy-now-btn">Buy Now</button>
+                        <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
-                    <div class="featured-item-3">
+                    <div class="featured-item">
                         <img src="image/aqua-flask.png" alt="Featured-Item3">
                         <h3>Aquaflask Bottle</h3>
                         <h3>(Price Now)</h3>
-                        <h4>(Price Before)</h4>
                         <h4>(Sold by: Qty)</h4>
-                        <h4>(Discount)</h4>
                         <p>(Ratings)</p>
+                        <button type="button" class="buy-now-btn">Buy Now</button>
+                        <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
-                    <div class="featured-item-4">
+                    <div class="featured-item">
                         <img src="image/Realme.jpg" alt="Featured-Item4">
                         <h3>Realme Narzo 50A Prime</h3>
                         <h3>(Price Now)</h3>
-                        <h4>(Price Before)</h4>
                         <h4>(Sold by: Qty)</h4>
-                        <h4>(Discount)</h4>
                         <p>(Ratings)</p>
+                        <button type="button" class="buy-now-btn">Buy Now</button>
+                        <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
-                    <div class="featured-item-5">
+                    <div class="featured-item">
                         <img src="image/speaker.jpg" alt="Featured-Item5">
                         <h3>Portable Bluetooth Speaker</h3>
                         <h3>(Price Now)</h3>
-                        <h4>(Price Before)</h4>
                         <h4>(Sold by: Qty)</h4>
-                        <h4>(Discount)</h4>
                         <p>(Ratings)</p>
+                        <button type="button" class="buy-now-btn">Buy Now</button>
+                        <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
-                    <div class="featured-item-6">
+                    <div class="featured-item">
                         <img src="image/lamp.jpg" alt="Featured-Item6">
-                        <h3>LED Desk Lamp</h3>
+                        <h3>Wireless Desk Lamp</h3>
                         <h3>(Price Now)</h3>
-                        <h4>(Price Before)</h4>
                         <h4>(Sold by: Qty)</h4>
-                        <h4>(Discount)</h4>
                         <p>(Ratings)</p>
+                        <button type="button" class="buy-now-btn">Buy Now</button>
+                        <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
-                    <div class="featured-item-7">
+                    <div class="featured-item">
                         <img src="image/charger.jpg" alt="Featured-Item7">
                         <h3>Wireless Charging Pad</h3>
                         <h3>(Price Now)</h3>
-                        <h4>(Price Before)</h4>
                         <h4>(Sold by: Qty)</h4>
-                        <h4>(Discount)</h4>
                         <p>(Ratings)</p>
+                        <button type="button" class="buy-now-btn">Buy Now</button>
+                        <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
-                    <div class="featured-item-8">
+                    <div class="featured-item">
                         <img src="image/hair.jpg" alt="Featured-Item8">
-                        <h3>Hair Straightener</h3>
                         <h3>(Price Now)</h3>
-                        <h4>(Price Before)</h4>
                         <h4>(Sold by: Qty)</h4>
-                        <h4>(Discount)</h4>
                         <p>(Ratings)</p>
+                        <button type="button" class="buy-now-btn">Buy Now</button>
+                        <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
-                    <div class="featured-item-9">
+                    <div class="featured-item">
                         <img src="image/earphones.jpg" alt="Featured-Item9">
                         <h3>Bluetooth Headphones</h3>
                         <h3>(Price Now)</h3>
-                        <h4>(Price Before)</h4>
                         <h4>(Sold by: Qty)</h4>
-                        <h4>(Discount)</h4>
                         <p>(Ratings)</p>
+                        <button type="button" class="buy-now-btn">Buy Now</button>
+                        <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
-                    <div class="featured-item-10">
+                    <div class="featured-item">
                         <img src="image/smartwatch.jpg" alt="Featured-Item10">
                         <h3>Smartwatch</h3>
                         <h3>(Price Now)</h3>
-                        <h4>(Price Before)</h4>
                         <h4>(Sold by: Qty)</h4>
-                        <h4>(Discount)</h4>
                         <p>(Ratings)</p>
+                        <button type="button" class="buy-now-btn">Buy Now</button>
+                        <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
-                    <div class="featured-item-11">
+                    <div class="featured-item">
                         <img src="image/toothbrush.jpg" alt="Featured-Item11">
                         <h3>Electric Toothbrush</h3>
                         <h3>(Price Now)</h3>
-                        <h4>(Price Before)</h4>
                         <h4>(Sold by: Qty)</h4>
-                        <h4>(Discount)</h4>
                         <p>(Ratings)</p>
+                        <button type="button" class="buy-now-btn">Buy Now</button>
+                        <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
-                    <div class="featured-item-12">
+                    <div class="featured-item">
                         <img src="image/earbuds.jpg" alt="Featured-Item12">
                         <h3>Bluetooth Earbuds</h3>
                         <h3>(Price Now)</h3>
-                        <h4>(Price Before)</h4>
                         <h4>(Sold by: Qty)</h4>
-                        <h4>(Discount)</h4>
                         <p>(Ratings)</p>
+                        <button type="button" class="buy-now-btn">Buy Now</button>
+                        <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
                 </div>
 
