Added scroll effect

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="content">
                 
                 <div class="banner">
-                    <a href=""><img src="image/banner.png" class="headline"></a>
+                    <a href="#featured-products"><img src="image/banner.png" class="headline"></a>
                     <br><br>
                 </div>
 
@@ -133,7 +133,7 @@
 
                 
 
-                <div class="featured-products">
+                <div id="featured-products">
                     <div class="featured-item">
                         <img src="image/cooking-pot.jpg" alt="Featured-Item1">
                         <h3>Portable Cooking Pot</h3>
