provided functionality on the footer section (making the options hyperlinks) - Sabela

--- a/index.html
+++ b/index.html
@@ -267,35 +267,40 @@
             <footer class="footer">
                 <div class="company-info">
                     <h3>Company Info</h3>
-                    <h4>About DealDivers</h4>
-                    <h4>Affiliate Program: Earn Commisions</h4>
-                    <h4>Contact Us</h4>
-                    <h4>Careers</h4>
+                    <ul>
+                        <li><a href="#">About DealDivers</a></li>
+                        <li><a href="#">Affiliate Program: Earn Commissions</a></li>
+                        <li><a href="mailto:support@dealdivers.com">Contact Us</a></li>
+                        <li><a href="#">Careers</a></li>
+                    </ul>
                 </div>
 
                 <div class="customer-service">
                     <h3>Customer Service</h3>
-                    <h4>Return and Refund Policy</h4>
-                    <h4>Intellectual Property Policy</h4>
-                    <h4>Shipping Info</h4>
-                    <h4>Report Suspicious Activity</h4>
+                    <ul>
+                        <li><a href="#">Return and Refund Policy</a></li>
+                        <li><a href="#">Intellectual Property Policy</a></li>
+                        <li><a href="#">Shipping Info</a></li>
+                        <li><a href="#">Report Suspicious Activity</a></li>
+                    </ul>
                 </div>
 
                 <div class="help">
                     <h3>Help</h3>
-                    <h4>Support Center and FAQ</h4>
-                    <h4>Safety Center</h4>
-                    <h4>DealDivers Purchase Protection</h4>
-                    <h4>Partner With DealDivers</h4>
+                    <ul>
+                        <li><a href="#">Support Center and FAQ</a></li>
+                        <li><a href="#">Safety Center</a></li>
+                        <li><a href="#">DealDivers Purchase Protection</a></li>
+                        <li><a href="#">Partner With DealDivers</a></li>
+                    </ul>
                 </div>
 
                 <div class="connect-with-dealdivers">
-                    <img src="image/facebook.png" alt="Facebook.png">
-                    <img src="image/gmail.png" alt="Gmail.png">
-                    <img src="image/instagram.png" alt="Instagram.png">
-                    <img src="image/tiktok.png" alt="Tiktok.png">
+                    <a href="#"><img src="image/facebook.png" alt="Facebook"></a>
+                    <a href="mailto:support@dealdivers.com"><img src="image/gmail.png" alt="Gmail"></a>
+                    <a href="#"><img src="image/instagram.png" alt="Instagram"></a>
+                    <a href="#"><img src="image/tiktok.png" alt="Tiktok"></a>
                 </div>
-
             </footer>
         </div>
     </body>
