add extra testimonial effects (added hover) cleaned up code + finishings - Sabela

--- a/index.html
+++ b/index.html
@@ -256,10 +256,19 @@
 
                 <div class="client-reviews">
                     <h2>Client Reviews</h2>
-                    <img src="image/vic.jpeg" alt="Client-Review-img.jpg">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas totam dolorum eligendi minima libero, doloribus fugit deleniti earum quos rerum enim non, pariatur recusandae neque sunt temporibus, officia necessitatibus aperiam praesentium! Obcaecati quibusdam tempora alias neque quae doloremque velit ab.</p>
-                    <h3>Vic Sotto</h3>
-                    <h4>Noon Time TV Host</h4>
+                    <div class = "review">
+                        <img src="image/vic.jpeg" alt="Client-Review-img.jpg">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas totam dolorum eligendi minima libero, doloribus fugit deleniti earum quos rerum enim non, pariatur recusandae neque sunt temporibus, officia necessitatibus aperiam praesentium! Obcaecati quibusdam tempora alias neque quae doloremque velit ab.</p>
+                        <h3>Vic Sotto</h3>
+                        <h4>Noon Time TV Host</h4>
+                    </div>
+
+                    <div class = "review">
+                        <img src="image/doinb.jpg?raw=true" alt="Client-Review-img.jpg">
+                        <p>选择草案 DOINB RYZE HACK英雄联盟 400 CS 24 MIN [L9 Turbo Boost] [ROLEX LASER BOOST] INSTA E 100% UNDETECTE 骇客</p>
+                        <h3>Kim "DoinB" Tae-sang</h3>
+                        <h4>Proffesional LoL Player</h4>
+                    </div>
                 </div>
             
             </div>
@@ -296,10 +305,10 @@
                 </div>
 
                 <div class="connect-with-dealdivers">
-                    <a href="#"><img src="image/facebook.png" alt="Facebook"></a>
-                    <a href="mailto:support@dealdivers.com"><img src="image/gmail.png" alt="Gmail"></a>
-                    <a href="#"><img src="image/instagram.png" alt="Instagram"></a>
-                    <a href="#"><img src="image/tiktok.png" alt="Tiktok"></a>
+                    <a href="#"><img src="image/facebook.png" alt="Dealdivers Facebook"></a>
+                    <a href="mailto:support@dealdivers.com"><img src="image/gmail.png" alt="Dealdivers Gmail"></a>
+                    <a href="#"><img src="image/instagram.png" alt="Dealdivers Instagram"></a>
+                    <a href="#"><img src="image/tiktok.png" alt="Dealdivers Tiktok"></a>
                 </div>
             </footer>
         </div>
