Added final touches to the Featured Items Section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DealDivers | Home</title>
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="icon" type="image/x-icon" href="image/logo.png">
     </head>
 
     <body>
@@ -51,6 +52,8 @@
                     <h1>Lightning Deals</h1>
                     <h2>Limited Time Only!</h2>
                 </div>
+
+                
 
 
 
@@ -127,8 +130,14 @@
 
                 </div>
 
-                <div class="featured-items-banner">
-                    <h3>Featured Items</h3>
+                <div class="suggestions-section">
+                    <ul>
+                        <li><button>Featured Items</button></li>
+                        <li><button>Free Shipping</button></li>
+                        <li><button>Frequently Sold</button></li>
+                        <li><button>On Sale</button></li>
+                        <li><button>with Claimable Vouchers</button></li>
+                    </ul>
                 </div>
 
                 
@@ -137,9 +146,9 @@
                     <div class="featured-item">
                         <img src="image/cooking-pot.jpg" alt="Featured-Item1">
                         <h3>Portable Cooking Pot</h3>
-                        <h3>(Price Now)</h3>
-                        <h4>(Sold by: Qty)</h4>
-                        <p>(Ratings)</p>
+                        <h3> ₱249</h3>
+                        <h4>899 Sold</h4>
+                        <p> 5.0 ★ ★ ★ ★ ★ (10k+) </p>
                         <button type="button" class="buy-now-btn">Buy Now</button>
                         <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
@@ -147,19 +156,19 @@
                     <div class="featured-item">
                         <img src="image/juicer.jpg" alt="Featured-Item2">
                         <h3>Portable Juicer</h3>
-                        <h3>(Price Now)</h3>
+                        <h3>₱523</h3>
                         <h4>(Sold by: Qty)</h4>
-                        <p>(Ratings)</p>
+                        <p> 5.0 ★ ★ ★ ★ ★ (10k+) </p>
                         <button type="button" class="buy-now-btn">Buy Now</button>
                         <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
                     <div class="featured-item">
                         <img src="image/aqua-flask.png" alt="Featured-Item3">
-                        <h3>Aquaflask Bottle</h3>
-                        <h3>(Price Now)</h3>
+                        <h3>Aquaflask Bottle (24.oz)</h3>
+                        <h3>₱890</h3>
                         <h4>(Sold by: Qty)</h4>
-                        <p>(Ratings)</p>
+                        <p> 5.0 ★ ★ ★ ★ ★ (10k+) </p>
                         <button type="button" class="buy-now-btn">Buy Now</button>
                         <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
@@ -167,9 +176,9 @@
                     <div class="featured-item">
                         <img src="image/Realme.jpg" alt="Featured-Item4">
                         <h3>Realme Narzo 50A Prime</h3>
-                        <h3>(Price Now)</h3>
+                        <h3>₱7,290</h3>
                         <h4>(Sold by: Qty)</h4>
-                        <p>(Ratings)</p>
+                        <p> 5.0 ★ ★ ★ ★ ★ (10k+) </p>
                         <button type="button" class="buy-now-btn">Buy Now</button>
                         <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
@@ -177,9 +186,9 @@
                     <div class="featured-item">
                         <img src="image/speaker.jpg" alt="Featured-Item5">
                         <h3>Portable Bluetooth Speaker</h3>
-                        <h3>(Price Now)</h3>
+                        <h3>₱389</h3>
                         <h4>(Sold by: Qty)</h4>
-                        <p>(Ratings)</p>
+                        <p> 5.0 ★ ★ ★ ★ ★ (10k+) </p>
                         <button type="button" class="buy-now-btn">Buy Now</button>
                         <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
@@ -187,9 +196,9 @@
                     <div class="featured-item">
                         <img src="image/lamp.jpg" alt="Featured-Item6">
                         <h3>Wireless Desk Lamp</h3>
-                        <h3>(Price Now)</h3>
+                        <h3>₱171</h3>
                         <h4>(Sold by: Qty)</h4>
-                        <p>(Ratings)</p>
+                        <p> 5.0 ★ ★ ★ ★ ★ (10k+) </p>
                         <button type="button" class="buy-now-btn">Buy Now</button>
                         <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
@@ -197,18 +206,19 @@
                     <div class="featured-item">
                         <img src="image/charger.jpg" alt="Featured-Item7">
                         <h3>Wireless Charging Pad</h3>
-                        <h3>(Price Now)</h3>
+                        <h3>₱1,790</h3>
                         <h4>(Sold by: Qty)</h4>
-                        <p>(Ratings)</p>
+                        <p> 5.0 ★ ★ ★ ★ ★ (10k+) </p>
                         <button type="button" class="buy-now-btn">Buy Now</button>
                         <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
 
                     <div class="featured-item">
                         <img src="image/hair.jpg" alt="Featured-Item8">
-                        <h3>(Price Now)</h3>
+                        <h3>Hair Straightener</h3>
+                        <h3>₱2,999</h3>
                         <h4>(Sold by: Qty)</h4>
-                        <p>(Ratings)</p>
+                        <p> 5.0 ★ ★ ★ ★ ★ (10k+) </p>
                         <button type="button" class="buy-now-btn">Buy Now</button>
                         <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
@@ -216,9 +226,9 @@
                     <div class="featured-item">
                         <img src="image/earphones.jpg" alt="Featured-Item9">
                         <h3>Bluetooth Headphones</h3>
-                        <h3>(Price Now)</h3>
+                        <h3>₱249</h3>
                         <h4>(Sold by: Qty)</h4>
-                        <p>(Ratings)</p>
+                        <p> 5.0 ★ ★ ★ ★ ★ (10k+) </p>
                         <button type="button" class="buy-now-btn">Buy Now</button>
                         <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
@@ -226,9 +236,9 @@
                     <div class="featured-item">
                         <img src="image/smartwatch.jpg" alt="Featured-Item10">
                         <h3>Smartwatch</h3>
-                        <h3>(Price Now)</h3>
+                        <h3>₱3,990</h3>
                         <h4>(Sold by: Qty)</h4>
-                        <p>(Ratings)</p>
+                        <p> 5.0 ★ ★ ★ ★ ★ (10k+) </p>
                         <button type="button" class="buy-now-btn">Buy Now</button>
                         <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
@@ -236,9 +246,9 @@
                     <div class="featured-item">
                         <img src="image/toothbrush.jpg" alt="Featured-Item11">
                         <h3>Electric Toothbrush</h3>
-                        <h3>(Price Now)</h3>
+                        <h3>₱443</h3>
                         <h4>(Sold by: Qty)</h4>
-                        <p>(Ratings)</p>
+                        <p> 5.0 ★ ★ ★ ★ ★ (10k+) </p>
                         <button type="button" class="buy-now-btn">Buy Now</button>
                         <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
@@ -246,19 +256,32 @@
                     <div class="featured-item">
                         <img src="image/earbuds.jpg" alt="Featured-Item12">
                         <h3>Bluetooth Earbuds</h3>
-                        <h3>(Price Now)</h3>
+                        <h3>₱269</h3>
                         <h4>(Sold by: Qty)</h4>
-                        <p>(Ratings)</p>
+                        <p> 5.0 ★ ★ ★ ★ ★ (10k+) </p>
                         <button type="button" class="buy-now-btn">Buy Now</button>
                         <button type="button" class="add-to-cart-btn">Add to Cart</button>
                     </div>
+
                 </div>
+
+                <div class="featured-products-pagination">
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                    <button>4</button>
+                    <button>5</button>
+                </div>
+
+
 
                 <div class="client-reviews">
                     <h2>Client Reviews</h2>
                     <div class = "review">
                         <img src="image/vic.jpeg" alt="Client-Review-img.jpg">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas totam dolorum eligendi minima libero, doloribus fugit deleniti earum quos rerum enim non, pariatur recusandae neque sunt temporibus, officia necessitatibus aperiam praesentium! Obcaecati quibusdam tempora alias neque quae doloremque velit ab.</p>
+                        <p>"Wow! I have to say, DealDivers really impressed me. The delivery was so fast, it almost beat my 'Eat Bulaga!' opening spiel! I ordered a Pepsi, and before I could finish my line, it was at my doorstep. Just like magic!
+
+                            From now on, whenever I need something quick and reliable, DealDivers is my go-to. So, to all my friends and fans, if you want to experience lightning-fast delivery and great service, you know where to go. DealDivers, ang bilis, parang si Bossing lang!"</p>
                         <h3>Vic Sotto</h3>
                         <h4>Noon Time TV Host</h4>
                     </div>
@@ -274,43 +297,43 @@
             </div>
 
             <footer class="footer">
-                <div class="company-info">
-                    <h3>Company Info</h3>
-                    <ul>
-                        <li><a href="#">About DealDivers</a></li>
-                        <li><a href="#">Affiliate Program: Earn Commissions</a></li>
-                        <li><a href="mailto:support@dealdivers.com">Contact Us</a></li>
-                        <li><a href="#">Careers</a></li>
-                    </ul>
+                <div class="footer-section company-info">
+                  <h3>Company Info</h3>
+                  <ul>
+                    <li><a href="#">About DealDivers</a></li>
+                    <li><a href="#">Affiliate Program: Earn Commissions</a></li>
+                    <li><a href="mailto:support@dealdivers.com">Contact Us</a></li>
+                    <li><a href="#">Careers</a></li>
+                  </ul>
                 </div>
-
-                <div class="customer-service">
-                    <h3>Customer Service</h3>
-                    <ul>
-                        <li><a href="#">Return and Refund Policy</a></li>
-                        <li><a href="#">Intellectual Property Policy</a></li>
-                        <li><a href="#">Shipping Info</a></li>
-                        <li><a href="#">Report Suspicious Activity</a></li>
-                    </ul>
+                <div class="footer-section customer-service">
+                  <h3>Customer Service</h3>
+                  <ul>
+                    <li><a href="#">Return and Refund Policy</a></li>
+                    <li><a href="#">Intellectual Property Policy</a></li>
+                    <li><a href="#">Shipping Info</a></li>
+                    <li><a href="#">Report Suspicious Activity</a></li>
+                  </ul>
                 </div>
-
-                <div class="help">
-                    <h3>Help</h3>
-                    <ul>
-                        <li><a href="#">Support Center and FAQ</a></li>
-                        <li><a href="#">Safety Center</a></li>
-                        <li><a href="#">DealDivers Purchase Protection</a></li>
-                        <li><a href="#">Partner With DealDivers</a></li>
-                    </ul>
+                <div class="footer-section help">
+                  <h3>Help</h3>
+                  <ul>
+                    <li><a href="#">Support Center and FAQ</a></li>
+                    <li><a href="#">Safety Center</a></li>
+                    <li><a href="#">DealDivers Purchase Protection</a></li>
+                    <li><a href="#">Partner With DealDivers</a></li>
+                  </ul>
                 </div>
-
-                <div class="connect-with-dealdivers">
-                    <a href="#"><img src="image/facebook.png" alt="Dealdivers Facebook"></a>
-                    <a href="mailto:support@dealdivers.com"><img src="image/gmail.png" alt="Dealdivers Gmail"></a>
-                    <a href="#"><img src="image/instagram.png" alt="Dealdivers Instagram"></a>
-                    <a href="#"><img src="image/tiktok.png" alt="Dealdivers Tiktok"></a>
+                <div class="footer-section connect-with-dealdivers">
+                  <h4>Connect with us:</h4>
+                  <a href="#"><img src="image/facebook.png" alt="Dealdivers Facebook"></a>
+                  <a href="mailto:support@dealdivers.com"><img src="image/gmail.png" alt="Dealdivers Gmail"></a>
+                  <a href="#"><img src="image/instagram.png" alt="Dealdivers Instagram"></a>
+                  <a href="#"><img src="image/tiktok.png" alt="Dealdivers Tiktok"></a>
                 </div>
-            </footer>
+              </footer>
         </div>
+
+        <script src="scripts.js"></script>
     </body>
 </html>
